# trackex-desktop-agent

./: .gitignore  BACKEND-INTEGRATION.md  CHANGES_APPLIED.md  CRITICAL_FIX_APPLIED.md  FRONTEND_FIX.md  IMPLEMENTATION_STATUS.md  MACOS_BUILD_FIXES.md  MACOS_LOADING_FIX.md  PRODUCTION-READY.md  README-PRODUCTION.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_SUMMARY.md  SERVICES_LIFECYCLE_FIX.md  TROUBLESHOOTING.md  clear_db.sql  package-lock.json  package.json
.github/certs/: certificate.p12
.github/workflows/: cancel-notarization.yml  check-notarization.yml  create-dmg.yml  notarization-history.yml  release-macos-latest.yml  release-macos.yml  staple-latest.yml  verify-notarization.yml  verify-staple.yml
scripts/: build-production.sh  build.sh  clear-database.bat  clear-database.sh  codesign-production.sh  deploy-production.sh  notarize-production.sh
src/: App.css  App.tsx
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  consent.rs  lib.rs  main.rs  permissions.rs
src-tauri/src/api/: app_rules.rs  client.rs  device_registration.rs  job_polling.rs  mod.rs  reporting.rs  uploads.rs
src-tauri/src/policy/: mod.rs  privacy.rs  toggles.rs
src-tauri/src/sampling/: app_focus.rs  heartbeat.rs  idle_detector.rs  mod.rs  power_state.rs  queue_processor.rs
src-tauri/src/screenshots/: mod.rs  permissions.rs  screen_capture.rs
src-tauri/src/storage/: app_usage.rs  consent.rs  database.rs  mod.rs  offline_queue.rs  secure_store.rs  work_session.rs
src-tauri/src/utils/: logging.rs  mod.rs  permissions.rs  productivity.rs
src/components/: ConsentWizard.tsx  LoginScreen.tsx  MainView.tsx  PermissionsHelper.tsx
tests/: manual_qa_checklist.md
tests/unit/: policy_tests.rs  queue_tests.rs  redaction_tests.rs
